tdf#134570: doc import: list level format string fixed

List level placeholder is defined from char at defined
position, not only from position array.

Change-Id: I008e6711312435571f0d04544f6bfa42c1309f31