sw/qa/extras/ww8export/ww8export3.cxx
@@ -599,6 +599,16 @@ DECLARE_WW8EXPORT_TEST(testTdf120394, "tdf120394.doc")
     }
 }
 
+DECLARE_WW8EXPORT_TEST(testTdf134570, "tdf134570.doc")
+{
+    CPPUNIT_ASSERT_EQUAL(1, getPages());
+    {
+        uno::Reference<beans::XPropertySet> xPara(getParagraph(1), uno::UNO_QUERY);
+        CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int16>(1), getProperty<sal_Int16>(xPara, "NumberingLevel"));
+        CPPUNIT_ASSERT_EQUAL(OUString("1"), getProperty<OUString>(xPara, "ListLabelString"));
+    }
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
